add e2e tests; fix bugs
