# internal/http/handlers/handlers.go
@@ -12,7 +12,7 @@ type Usecases interface {
 	CreateTeam(ctx context.Context, reqDTO *dto.AddTeamRequest) error
 
 	UserSetIsActive(ctx context.Context, reqDTO *dto.SetIsActiveRequest) (*models.User, error)
-	GetReviewers(ctx context.Context, userId string) ([]*models.PullRequest, error)
+	GetPRs(ctx context.Context, userId string) ([]*models.PullRequest, error)
 
 	CreatePR(ctx context.Context, reqDTO *dto.CreatePRRequest) (*models.PullRequest, error)
 	MergePR(ctx context.Context, prId string) (*models.PullRequest, error)
